refactor: Reading